[workspace]
members = ["packages/*"]

[workspace.package]
authors    = ["larry <gm@larry.engineer>"]
edition    = "2021"
homepage   = "https://larry.engineer"
repository = "https://github.com/larry0x/cw-plus-plus"
license    = "Apache-2.0"
keywords   = ["cosmos", "cosmwasm"]

[workspace.dependencies]
cosmwasm-schema   = "2.0"
cosmwasm-std      = "2.0"
cw-address-like   = { version = "2.0.0", path = "./packages/address-like" }
cw-ownable-derive = { version = "0.6.0", path = "./packages/ownable/derive" }
cw-storage-plus   = "2.0"
cw-utils          = "2.0"
proc-macro2       = "1"
quote             = "1"
serde             = { version = "1", default-features = false }
syn               = "1"
thiserror         = "1"
